updated resume added, new project added

--- a/public/index.html
+++ b/public/index.html
@@ -8,22 +8,22 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
-  <title>Monu | Portfolio</title>
+  <title>Prince | Portfolio</title>
   <meta name="description" content="Self Developed personal website build with React.js">
 
   <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="Monu Kumar | Portfolio">
+  <meta itemprop="name" content="Prince Kumar Kumar | Portfolio">
   <meta itemprop="description" content="Self Developed personal website build with React.js">
   <meta itemprop="image"
-    content="https://i.postimg.cc/RhdTjvVC/Screenshot-2022-07-10-162659.png">
+    content="https://ibb.co/Brfcyr3">
 
   <!-- Facebook Meta Tags -->
   <!-- <meta property="og:url" content="http://www.logicstime.com/"> -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Monu Kumar | Portfolio">
+  <meta property="og:title" content="Prince Kumar Singh | Portfolio">
   <meta property="og:description" content="Self Developed personal website build with React.js">
   <meta property="og:image"
-    content="https://i.postimg.cc/RhdTjvVC/Screenshot-2022-07-10-162659.png">
+    content="https://ibb.co/Brfcyr3">
 
 </head>
 
